# qPolygonSFEditor

./: CMakeLists.txt  README.md  info.json  qPolygonSFEditor.qrc
include/: CMakeLists.txt  PolygonSFEditAction.h  PolygonSFEditorTool.h  SFValueInputDialog.h  qPolygonSFEditor.h
src/: CMakeLists.txt  PolygonSFEditAction.cpp  PolygonSFEditorTool.cpp  SFValueInputDialog.cpp  qPolygonSFEditor.cpp
ui/: CMakeLists.txt  sfValueInputDialog.ui
